--- a/task-manager-k8s.yaml
+++ b/task-manager-k8s.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,22 +20,22 @@ spec:
       nodeSelector:
         kubernetes.io/os: linux
       containers:
-        - name: task-manager
-          image: abhaybharti21/task-manager:latest
-          ports:
-            - containerPort: 8080
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "100m"
-            limits:
-              memory: "128Mi"
-              cpu: "200m"
+      - name: task-manager
+        image: abhaybharti21/task-manager:latest
+        ports:
+        - containerPort: 8080
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "100m"
+          limits:
+            memory: "128Mi"
+            cpu: "200m"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: task-manager
+  name: task-manager-service
   namespace: test-ns
   annotations:
     janitor/ttl: "72h"
@@ -45,15 +44,15 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 8080
-      targetPort: 8080
+  - port: 8080
+    targetPort: 8080
   selector:
     app: task-manager
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: task-manager
+  name: task-manager-ingress
   namespace: test-ns
   annotations:
     kubernetes.io/ingress.class: traefik-concierge
@@ -63,14 +62,15 @@ metadata:
 spec:
   entryPoints:
     - http
+    - https
   routes:
     - kind: Rule
       match: Host(`abhay-pod.dev.razorpay.in`)
       services:
-        - name: task-manager
+        - name: task-manager-service
           port: 8080
     - kind: Rule
       match: Host(`abhay-pod.dev.razorpay.in`) && Headers(`rzpctx-dev-serve-user`, `abhay-pod`)
       services:
-        - name: todo-service
+        - name: task-manager-service
           port: 8080
